<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:padding="@dimen/activity_vertical_margin" >

<RelativeLayout
    android:id="@+id/login_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:visibility="visible" >

    <TextView
        android:id="@+id/gmailuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#0080B4" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>
</RelativeLayout>

<LinearLayout
    android:id="@+id/share_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:visibility="gone" >

    <TextView
        android:id="@+id/user_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/hello"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#0080B4" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gmail_from_email"
        android:id="@+id/gmail_from_source"
        >
        <EditText
            android:id="@+id/gmail_from_Editsource"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:enabled="false"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gmail_source"
        android:id="@+id/gmail_source"
        >
        <EditText
            android:id="@+id/gmail_Editsource"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/subject_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#cceaf3"
        android:hint="@string/gmail_subject"
        android:inputType="textMultiLine"
        android:padding="10dp" />

    <EditText
        android:id="@+id/share_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#cceaf3"
        android:hint="@string/gmail_body"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:padding="10dp" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#0080B4"
        android:text="@string/btn_sendMail"
        android:textColor="#fff" />
</LinearLayout>

</LinearLayout>